--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "qrcode-terminal": "^0.12.0",
+    "socket.io": "^4.7.2",
     "whatsapp-web.js": "^1.23.0"
   }
 }
